# techmed

./: README.md  docker-compose.yml  orm.db  pyproject.toml  requirements.txt
.github/workflows/: master_techmed.yml
api/: admin.py  auth.py  database.py  functions.py  insert_mock_data.py  main.py  misc.py  models.py  orm.db  schemas.py  security.py  test_main.py
api/doctor/: doctor.py  main.py
backend/: DEV_private_key.pem  DEV_public_key.pem  orm.db  pyproject.toml  test_api.py
backend/api/: admin.py  auth.py  database.py  functions.py  insert_mock_data.py  main.py  misc.py  models.py  schemas.py  security.py
backend/api/doctor/: main.py
backend/api/patient/: main.py
fastapi/: auth.py  database.py  insert_mock_data.py  main.py  models.py  security.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.jsx  page.js  page.jsx
frontend/src/app/doctor/: layout.js  layout.jsx  page.jsx
frontend/src/app/login/: layout.js  page.jsx
frontend/src/app/patient/: layout.js  layout.jsx  page.jsx
frontend/src/app/register/: layout.js  page.jsx
nextjs/: next.config.js  package-lock.json  package.json
nextjs/components/: LoggedInForm.jsx  LoginForm.js  RegisterForm.js
nextjs/pages/: index.js  login.js  register.js  zalogowany.jsx
techmed-frontend/: README.md  TO-DO  Uzywane  components.json  jsconfig.json  package-lock.json  package.json
techmed-frontend/src/Usuń/: login.js  page.jsx  profile.js  zalogowany.jsx
techmed-frontend/src/app/: layout.js  page.js
techmed-frontend/src/styles/: globals.css
(+11 files in other folders)
